--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
-      
+        <li class="nav-item">
+            <a class="nav-link" href="#">contact</a>
+          </li>
+        
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
